// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitDiff renders 1`] = `
<SplitDiff
  base="restaurant"
  target="aura"
  type="lines"
>
  <SplitTable>
    <table
      className="css-1tqeqql-SplitTable earab4v0"
    >
      <SplitBody>
        <tbody
          className="css-h1p2x1-SplitBody earab4v1"
        >
          <tr
            key="0"
          >
            <Cell
              isRemoved={
                Object {
                  "added": undefined,
                  "count": 1,
                  "removed": true,
                  "value": "restaurant",
                }
              }
            >
              <td
                className="css-16vgdps-Cell earab4v2"
              >
                <Line>
                  <div
                    className="css-wtjkg5-Line earab4v4"
                  >
                    <Word
                      isRemoved={true}
                      key="0"
                    >
                      <span
                        className="css-a5wlhp-Word earab4v5"
                      >
                        restaurant
                      </span>
                    </Word>
                  </div>
                </Line>
              </td>
            </Cell>
            <Gap>
              <td
                className="css-lqso9g-Gap earab4v3"
              />
            </Gap>
            <Cell
              isAdded={
                Object {
                  "added": true,
                  "count": 1,
                  "removed": undefined,
                  "value": "aura",
                }
              }
            >
              <td
                className="css-15x1ris-Cell earab4v2"
              >
                <Line>
                  <div
                    className="css-wtjkg5-Line earab4v4"
                  >
                    <Word
                      isAdded={true}
                      key="0"
                    >
                      <span
                        className="css-jvievq-Word earab4v5"
                      >
                        aura
                      </span>
                    </Word>
                  </div>
                </Line>
              </td>
            </Cell>
          </tr>
        </tbody>
      </SplitBody>
    </table>
  </SplitTable>
</SplitDiff>
`;

exports[`SplitDiff renders with newlines 1`] = `
<SplitDiff
  base="this is my restaurant
    and restaurant
    common"
  target="aura
    and your aura
    common"
  type="lines"
>
  <SplitTable>
    <table
      className="css-1tqeqql-SplitTable earab4v0"
    >
      <SplitBody>
        <tbody
          className="css-h1p2x1-SplitBody earab4v1"
        >
          <tr
            key="0"
          >
            <Cell
              isRemoved={
                Object {
                  "added": undefined,
                  "count": 1,
                  "removed": true,
                  "value": "this is my restaurant",
                }
              }
            >
              <td
                className="css-16vgdps-Cell earab4v2"
              >
                <Line>
                  <div
                    className="css-wtjkg5-Line earab4v4"
                  >
                    <Word
                      isRemoved={true}
                      key="0"
                    >
                      <span
                        className="css-a5wlhp-Word earab4v5"
                      >
                        this is my restaurant
                      </span>
                    </Word>
                  </div>
                </Line>
              </td>
            </Cell>
            <Gap>
              <td
                className="css-lqso9g-Gap earab4v3"
              />
            </Gap>
            <Cell
              isAdded={
                Object {
                  "added": true,
                  "count": 1,
                  "removed": undefined,
                  "value": "aura",
                }
              }
            >
              <td
                className="css-15x1ris-Cell earab4v2"
              >
                <Line>
                  <div
                    className="css-wtjkg5-Line earab4v4"
                  >
                    <Word
                      isAdded={true}
                      key="0"
                    >
                      <span
                        className="css-jvievq-Word earab4v5"
                      >
                        aura
                      </span>
                    </Word>
                  </div>
                </Line>
              </td>
            </Cell>
          </tr>
          <tr
            key="1"
          >
            <Cell
              isRemoved={
                Object {
                  "added": undefined,
                  "count": 1,
                  "removed": true,
                  "value": "    and restaurant",
                }
              }
            >
              <td
                className="css-16vgdps-Cell earab4v2"
              >
                <Line>
                  <div
                    className="css-wtjkg5-Line earab4v4"
                  >
                    <Word
                      isRemoved={true}
                      key="0"
                    >
                      <span
                        className="css-a5wlhp-Word earab4v5"
                      >
                            and restaurant
                      </span>
                    </Word>
                  </div>
                </Line>
              </td>
            </Cell>
            <Gap>
              <td
                className="css-lqso9g-Gap earab4v3"
              />
            </Gap>
            <Cell
              isAdded={
                Object {
                  "added": true,
                  "count": 1,
                  "removed": undefined,
                  "value": "    and your aura",
                }
              }
            >
              <td
                className="css-15x1ris-Cell earab4v2"
              >
                <Line>
                  <div
                    className="css-wtjkg5-Line earab4v4"
                  >
                    <Word
                      isAdded={true}
                      key="0"
                    >
                      <span
                        className="css-jvievq-Word earab4v5"
                      >
                            and your aura
                      </span>
                    </Word>
                  </div>
                </Line>
              </td>
            </Cell>
          </tr>
          <tr
            key="2"
          >
            <Cell>
              <td
                className="css-1kp4lih-Cell earab4v2"
              >
                <Line>
                  <div
                    className="css-wtjkg5-Line earab4v4"
                  >
                    <Word
                      key="0"
                    >
                      <span
                        className="css-16nwljm-Word earab4v5"
                      >
                            common
                      </span>
                    </Word>
                  </div>
                </Line>
              </td>
            </Cell>
            <Gap>
              <td
                className="css-lqso9g-Gap earab4v3"
              />
            </Gap>
            <Cell>
              <td
                className="css-1kp4lih-Cell earab4v2"
              >
                <Line>
                  <div
                    className="css-wtjkg5-Line earab4v4"
                  >
                    <Word
                      key="0"
                    >
                      <span
                        className="css-16nwljm-Word earab4v5"
                      >
                            common
                      </span>
                    </Word>
                  </div>
                </Line>
              </td>
            </Cell>
          </tr>
        </tbody>
      </SplitBody>
    </table>
  </SplitTable>
</SplitDiff>
`;
